--- a/styless/basic.css
+++ b/styless/basic.css
@@ -1,16 +1,34 @@
+:root{
+    --background-color: white;
+    --header-color: black; 
+    --tittle-color: white;
+    --text-color: black;
+    
+
+}
+
 .header{
+    background: var(--header-color);
+    box-shadow: 0 4px 5px black;
+}
+
+.nav-header{
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    padding:10px;
+    /*align-items: center;
     width: 100vw;
     height: 5px; 
-    padding: 5vh 3vw 5vh 3vw;
-    background: black;
+    padding: 5vh 3vw 5vh 3vw; */ 
 }
+
+/*logo*/
+
+/*.header-logo{
+    display: flex;
+    align-items: center;
+}*/
 .header-icon{
-    margin: 2px 2px 2px 2px;
     width: 50px;
     min-width: 80px;
     height: fit-content;
@@ -19,8 +37,29 @@
 }
 
 
-h2{
-    color:aliceblue;
+/*Menu*/
+
+.menu{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu li{
+    color:var(--tittle-color);
+    font-family:Arial, Helvetica, sans-serif;
+    padding: 15px 15px 15px 15px;
+    font-size: 100%;
+    text-transform: uppercase;
+}
+
+
+
+
+/*
+li{
+    color:var(--tittle-color);
     font-family:Arial, Helvetica, sans-serif;
     text-decoration: underline;
     padding-left: -2%;
@@ -33,4 +72,4 @@ h2{
 
 #lista2{
     padding-right: 50%;
-}
+}*/
